<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_picker_group_default_title">Your apps</string>
    <string name="app_picker_group_title_format">%1$s (%2$d)</string>
    <string name="app_picker_no_apps">No apps selected</string>
    <string name="app_picker_no_apps_found">No apps found</string>
    <string name="auto_synced_item_gmail">Gmail</string>
    <string name="auto_synced_item_google_calendar">Google Calendar</string>
    <string name="auto_synced_item_google_contacts">Google Contacts</string>
    <string name="auto_synced_item_google_photos">Google Photos</string>
    <string name="auto_synced_title">Synced automatically</string>
    <string name="backup_d2d_migration_tool_activity_name">Data Transfer Tool</string>
    <string name="button_dont_copy">Don’t copy</string>
    <string name="button_dont_restore">Don’t restore</string>
    <string name="button_dont_restore_apps">Don’t restore apps</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close_button_label">Close</string>
    <string name="cloud_restore_app_picker_description_no_apps">Your backup doesn’t have any apps</string>
    <string name="cloud_restore_app_picker_title">Choose apps to restore</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_confirm">Confirm</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_ok">OK</string>
    <string name="common_restore">Restore</string>
    <string name="common_skip">Skip</string>
    <string name="contacts_no_number_device_and_sim">Device and SIM contacts</string>
    <string name="content_selector_ui_title">Choose what to restore</string>
    <string name="continue_setup_description">You can continue setting up your ^1</string>
    <string name="d2d_app_picker_title">Apps</string>
    <string name="default_web_client_id">457971301265-j6nr3pv3517llifd7ktcpecr248t9d8u.apps.googleusercontent.com</string>
    <string name="device_picker_empty">No backups linked to %1$s.</string>
    <string name="device_picker_empty_title">No backups found</string>
    <string name="device_picker_item">%1$s backup</string>
    <string name="device_picker_summary">Choose a backup below</string>
    <string name="device_picker_summary_work_profile">Restore your work apps from an old phone</string>
    <string name="device_picker_title">Restore data from an old phone</string>
    <string name="device_picker_title_work_profile">Choose a phone</string>
    <string name="dialog_continue_button_label">Continue</string>
    <string name="drive_backup_content_callhistory_title">Call history</string>
    <string name="drive_backup_content_contacts_title">Contacts</string>
    <string name="drive_backup_content_devicesettings_title">Device settings</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fileSizeSuffix">%1$s %2$s</string>
    <string name="firebase_database_url">https://restore-3bcfb.firebaseio.com</string>
    <string name="flow_choice_description_text_new">You can choose to transfer your apps, photos, contacts, Google Account, and more.</string>
    <string name="flow_choice_description_text_new_esim">You can choose to transfer your apps, photos, contacts, Google Account, phone number, and more.</string>
    <string name="flow_choice_dont_copy_data_esim">Set up number only</string>
    <string name="flow_choice_title">Copy apps &amp; data</string>
    <string name="fragment_usb_dont_have_old_phone">Can’t use old phone?</string>
    <string name="fragment_waiting_title">Just a sec…</string>
    <string name="fragment_wifi_restore_choice_title">Use your old phone to transfer data wirelessly</string>
    <string name="fragment_wifi_restore_choice_use_iphone_button">Using an iPhone® device?</string>
    <string name="gcm_defaultSenderId">457971301265</string>
    <string name="gigabyteShort">GB</string>
    <string name="google_api_key">AIzaSyB1MY4bsuMKvH2bQsuWqnKzNuOqwXChRwQ</string>
    <string name="google_app_id">1:457971301265:android:2325bef3de0a5b34</string>
    <string name="google_contacts_will_sync">Google Contacts will sync</string>
    <string name="google_crash_reporting_api_key">AIzaSyB1MY4bsuMKvH2bQsuWqnKzNuOqwXChRwQ</string>
    <string name="google_one_download_notification_collapsed_body">Install the Google One app to restore the rest of your data</string>
    <string name="google_one_download_notification_expanded_body">Install the Google One app to restore the rest of your data. Your photos, videos, texts, and more will show up on your new device.</string>
    <string name="google_one_download_notification_title">Finish restoring data</string>
    <string name="google_one_product_name">Google One</string>
    <string name="google_storage_bucket">restore-3bcfb.appspot.com</string>
    <string name="key_recovery_instruction_description">To decrypt your backup, enter your old phone’s screen lock on the next screen</string>
    <string name="key_recovery_instruction_title">Confirm your old %s screen lock</string>
    <string name="kilobyteShort">KB</string>
    <string name="lock_screen_entry_title">Confirm your old %s screen lock</string>
    <string name="lock_screen_error_other">Something went wrong. Try again later.</string>
    <string name="lock_screen_error_wrong_password">Wrong password</string>
    <string name="lock_screen_error_wrong_pattern">Wrong pattern</string>
    <string name="lock_screen_error_wrong_pin">Wrong PIN</string>
    <string name="lockscreen_access_pattern_area">Pattern area</string>
    <string name="lockscreen_access_pattern_cell_added_verbose">Cell %d added</string>
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>
    <string name="lockscreen_access_pattern_start">Pattern started</string>
    <string name="megabyteShort">MB</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to selecting a year</string>
    <string name="oem_use_old_device_description">You need your old Android, iPhone®, or iPad® device</string>
    <string name="oem_use_old_device_title">Use your old device</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="petabyteShort">PB</string>
    <string name="primes_debug_activity_label">PRIMES Events</string>
    <string name="primes_marker">PrImEs</string>
    <string name="primes_menu_clear_all">Clear all</string>
    <string name="primes_menu_close">Close</string>
    <string name="primes_menu_refresh">Refresh</string>
    <string name="primes_option_all_events">All</string>
    <string name="progressing_description">This may take a few minutes</string>
    <string name="project_id">restore-3bcfb</string>
    <string name="restore_apk_title">Android Setup</string>
    <string name="restore_choice_android_device_label">A backup from an Android phone</string>
    <string name="restore_choice_android_device_label_new">Android</string>
    <string name="restore_choice_android_device_summary">Use your old phone to copy data wirelessly</string>
</resources>