<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/sud_glif_margin_sides" android:paddingRight="@dimen/sud_glif_margin_sides" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sud_glif_margin_sides" android:importantForAccessibility="no"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingBottom="@dimen/sud_content_frame_padding_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:importantForAccessibility="yes">
        <TextView android:textSize="12.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sud_description_margin_top" android:layout_marginBottom="@dimen/sud_header_title_margin_bottom" android:text="@string/auto_synced_title" android:fontFamily="sans-serif-medium" style="@style/SudItemTitle" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/auto_synced_item_google_calendar" style="@style/SudItemTitle" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/auto_synced_item_google_contacts" style="@style/SudItemTitle" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/auto_synced_item_google_photos" style="@style/SudItemTitle" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/auto_synced_item_gmail" style="@style/SudItemTitle" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sud_description_margin_top">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/quantum_ic_info_outline_grey600_24" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/sud_glif_margin_sides">
            <TextView android:id="@id/restore_choice_data_disclaimer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/restore_choice_data_disclaimer_margin_bottom" style="@style/TextAppearance.SudGlifItemSummary" />
            <TextView android:id="@id/restore_choice_sync_disclaimer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/sud_description_margin_bottom" style="@style/TextAppearance.SudGlifItemSummary" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>